IC-fix avatar fix z-index

--- a/src/features/post/Cropping/ui/ImageCropDialog/ImageCropDialog.module.scss
+++ b/src/features/post/Cropping/ui/ImageCropDialog/ImageCropDialog.module.scss
@@ -31,8 +31,6 @@
       margin-right: 1rem;
     }
   }
-  &[data-radix-popper-content-wrapper]{
-    z-index: 9999999999 !important;
-  }
+
 }
 
